2007-11-18  Robert Ancell  <robert.ancell@gmail.com>

	* minefield.c: Fix redraw error when holiding right and repeatedly clicking left
	  button. Adapted patch from WuSonghai in Bug #420643.

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* minefield.c: Only redraw the necessary fields when clicking on
	a mine. Patch from Thomas Andersen in bug #375691. 

2007-04-25  Robert Ancell  <robert.ancell@gmail.com>

	* gnomine.c: Don't hide minefield if game not started (Bug #433036)

2006-12-10  Robert Ancell  <robert.ancell@gmail.com>

	* minefield.c: Refactored to add gtk_minefield_set_mark() (simpler to understand)
	* minefield.c: Added gtk_minefield_solve_square() (Bug #307245) (disabled by default)
	* gnomine.schemas.in: Added missing schema entries

2006-08-04  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* help/C/gnomine.xml: Remove incorrect escaping of special
	character in XML documentation.

2006-10-01  Jason Clinton  <me@jasonclinton.com>

	* 16x16:
	* 22x22:
	* 32x32:
	* Makefile.am: Added 16, 22, and 32 icons sizes per Novell request

2006-08-21  Jason Clinton  <me@jasonclinton.com>

	* gnome-gnomines.png:
	* gnome-gnomines.svg:
	* Makefile.am: Added pixmap and SVG icons from Daniel Derozier <dcubed20@gmail.com>

2006-08-04  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* minefield.c: Fix removal of prelight in top-left corner tile.
	Bug reported by Shaun McCance in Bug #349696. 


2006-07-14  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* help/C/gnomine.xml:
	* gnomine.c: Add a Pause/Resume menu item. See Bug #346969.

2006-07-08  Andreas Røsdal  <andrearo@stud.ntnu.no>

        * Makefile.am:
        * gnomine.c:
        * gnomine.schemas.in:
        * minefield.c:
        * minefield.h:
        * warning.svg: 
        * help/C/gnomine.xml:
        * help/C/figures/preferences.png: Implement a warning when placing too many 
        markers around a mine. Patch by Zinx Verituse <zinx@users.sourceforge.net>
        in Bug #346404.
